--- a/templates/China_Web.html
+++ b/templates/China_Web.html
@@ -15,7 +15,8 @@
 
 <body>
     <div id="title">全国疫情实时监控
-    <a href="http://127.0.0.1:5000/#" style="color:lightseagreen; font-size: 0.7em">---回到首页</a></div>
+    <!-- <a href="http://127.0.0.1:5000/#" style="color:lightseagreen; font-size: 0.7em">---回到首页</a></div> -->
+    <a href="../index.html" style="color:lightseagreen; font-size: 0.7em">---回到首页</a></div>
     <div id="left1">
     </div>
     <div id="left2">
