--- a/templates/World_Web.html
+++ b/templates/World_Web.html
@@ -76,7 +76,8 @@
 <body>
     <div class="first">
         <h1>世界疫情数据分析</h1>
-        <a href="http://127.0.0.1:5000/" style="color:lightseagreen; font-size: 1.5em ;position: absolute; left: 59% ;top: 30%" >--回到首页</a>
+        <!-- <a href="http://127.0.0.1:5000/" style="color:lightseagreen; font-size: 1.5em ;position: absolute; left: 59% ;top: 30%" >--回到首页</a> -->
+        <a href="../index.html" style="color:lightseagreen; font-size: 1.5em ;position: absolute; left: 59% ;top: 30%" >--回到首页</a>
     </div>
     <div class="second" id="center">
         <h2 style="color: #E3EAF4;">世界死亡人数统计图</h2>
