--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,7 @@
         <div class="main">
             <ul>
                 <li class="active"><a href="#">首页</a></li>
-                <li><a href="/world" target="_parent">世界疫情状况</a></li>
+                <li><a href="./World_Web.html" target="_parent">世界疫情状况</a></li>
                 <!-- <li><a href="#">ddddd</a></li> -->
                 <li><a href="../templates/China_Web.html" target="_parent">全国疫情状况</a></li>
                 <!-- <li><a href="http://127.0.0.1:5000/china" target="_parent">全国疫情状况</a></li> -->
