--- a/templates/home.html
+++ b/templates/home.html
@@ -87,8 +87,7 @@
                 <li><a href="../templates/China_Web.html" target="_parent">全国疫情状况</a></li>
                 <!-- <li><a href="http://127.0.0.1:5000/china" target="_parent">全国疫情状况</a></li> -->
                 <li>
-                <!-- <form action="/province" method="get"> -->
-                <form action="./Province_Web.html" method="get">
+                <form action="/province" method="get">
                     <select style="height: 30px; width: 200px; "  name="data" >
                             <option  value="volovo">选择您要查看的省份：</option>
                             <option  value="安徽">安徽</option>
